--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Quality wigs, hand-made with care",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,7 +25,10 @@
   },
   "homepage": "https://github.com/RonAddy/Twilight_Tresses#readme",
   "dependencies": {
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.0",
+    "nodemon": "^1.18.4"
   }
 }
