--- a/client/package.json
+++ b/client/package.json
@@ -5,17 +5,24 @@
   "main": "Index.js",
   "author": "Ron Addy",
   "license": "MIT",
-  "devDependencies": {},
-  "dependencies": {
+  "scripts": {
+    "build": "webpack --mode development",
+    "start:dev": "webpack-dev-server"
+  },
+  "devDependencies": {
     "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-hot-loader": "^4.3.6",
     "style-loader": "0.21.0",
+    "webpack": "4.12.0",
     "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4"
-  }
+  },
+  "dependencies": {}
 }
