--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode development",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack --mode development && webpack-dev-server"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
