--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Twilight_Tresses",
+  "name": "Symphony.Tresses",
   "version": "1.0.0",
   "description": "Quality wigs, hand-made with care",
   "main": "Index.js",
