--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
+    "file-loader": "^2.0.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-hot-loader": "^4.3.6",
     "style-loader": "0.21.0",
+    "url-loader": "^1.1.1",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4"
